Adding the JQuery

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png">
+      <img src="img/images/blacklogo.png" width="150" height="100">
       <ul>
         <li>ABOUT</li>
         <li>SKILLS</li>
@@ -16,7 +16,7 @@
     </header>
     <section class="heroImg">
       <div class="content">
-        <img src="images/Me.png">
+        <img src="img/images/Me.png">
         <h1>Janelle Taylor</h1>
         <p>Visual designer passionate about designing products with engaging design. Strengths in teamwork, creativity, problem solving, adaptability to fast-paced environments, ideation and prototyping phase of projects. With an academic and professional background in Fine Arts and Graphic Design, my designs are clean and versatile.</p>
         <button>Download Resume</button>
@@ -78,5 +78,13 @@
         <li>CONTACT</li>
       </ul>
     </footer>
+
+    <div class="preloader">
+      <img src="img/images/blacklogo.png">
+    </div>
+
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/index.js"></script>
+  
 </html>
