--- a/index.html
+++ b/index.html
@@ -45,27 +45,28 @@
       <h1 class="heading">My Work</h1>
       <div class="workGrid">
         <div class="img1">
-          <img src="images/placeholder_picture.png">
+          <img src="img/images/parrot.png" height="200" width="250">
         </div>
         <div class="content1">
-          <h4>User Research</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h4>Feathered Friends Forever Website Redesign</h4>
+          <p>The aim of this project was to redesign a Non-profit website and create a more intuitive experience for users, catering to the specific goals of the company. 
+          </p>
           <button>View Project</button>
         </div>
         <div class="img2">
-          <img src="images/placeholder_picture.png">
+          <img src="img/images/pepper.png">
         </div>
         <div class="content2">
-          <h4>User Research</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h4>Spyce App</h4>
+          <p>Need help choosing where to go on a date with your partner? Look no further than Spyce! An interactive app.</p>
           <button>View Project</button>
         </div>
         <div class="img3">
-          <img src="images/placeholder_picture.png">
+          <img src="img/images/GitaTest1.jpg">
         </div>
         <div class="content3">
-          <h4>User Research</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h4>GITA-Galactic Interplanetary Travel Agency</h4>
+          <p>GITA is a hypothetical futuristic company, aka, the Galactic Interplanetary Travel Agency. This is a personal world building project </p>
           <button>View Project</button>
         </div>
       </div>
