--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homework 19</title>
+    <title>Project 19</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -25,19 +25,20 @@
     <h1 class="heading">My UX Skills</h1>
     <section class="flexContainer">
       <div>
-        <img src="images/placeholderSkill.png">
-        <h3>User Research</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat</p>
+        <img src="img/images/StoryBoard.png" height="200" width="300">
+        <h3>Storyboarding</h3>
+        <p>In the initial design process, I am able to provide quick storyboards to expedite the persona Flow</p>
       </div>
       <div>
-        <img src="images/placeholderSkill.png">
+        
+        <img src="img/images/UserInter.png" height="200" width="100">
         <h3>User Interface Design</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat</p>
+        <p>It is essential no time is lost in getting out designs clients will love, cohesive wireframes are a specialty.</p>
       </div>
       <div>
-        <img src="images/placeholderSkill.png">
+        <img src="img/images/WebbyDevvy.png" height="200" width="400">
         <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat</p>
+        <p>With Knowledge in HTML, CSS, and Bootstrap, I am able to help the development teams in the initial process of getting products live.</p>
       </div>
     </section>
 
