--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project 19</title>
+    <title>Homework 19</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="content">
         <img src="img/images/Me.png">
         <h1>Janelle Taylor</h1>
-        <p>Visual designer passionate about designing products with engaging design. Strengths in teamwork, creativity, problem solving, adaptability to fast-paced environments, ideation and prototyping phase of projects. With an academic and professional background in Fine Arts and Graphic Design, my designs are clean and versatile.</p>
+        <h4>Visual designer passionate about designing products with engaging design. Strengths in teamwork, creativity, problem solving, adaptability to fast-paced environments, ideation and prototyping phase of projects. With an academic and professional background in Fine Arts and Graphic Design, my designs are clean and versatile.</h4>
         <button>Download Resume</button>
       </div>
     </section>
@@ -30,7 +30,7 @@
         <p>In the initial design process, I am able to provide quick storyboards to expedite the persona Flow</p>
       </div>
       <div>
-        
+
         <img src="img/images/UserInter.png" height="200" width="100">
         <h3>User Interface Design</h3>
         <p>It is essential no time is lost in getting out designs clients will love, cohesive wireframes are a specialty.</p>
@@ -49,7 +49,7 @@
           <img src="img/images/parrot.png" height="200" width="250">
         </div>
         <div class="content1">
-          <h4>Feathered Friends Forever Website Redesign</h4>
+          <h2>Feathered Friends Forever Website Redesign</h2>
           <p>The aim of this project was to redesign a Non-profit website and create a more intuitive experience for users, catering to the specific goals of the company. 
           </p>
           <button>View Project</button>
@@ -58,7 +58,7 @@
           <img src="img/images/pepper.png">
         </div>
         <div class="content2">
-          <h4>Spyce App</h4>
+          <h2>Spyce App</h2>
           <p>Need help choosing where to go on a date with your partner? Look no further than Spyce! An interactive app.</p>
           <button>View Project</button>
         </div>
@@ -66,7 +66,7 @@
           <img src="img/images/GitaTest1.jpg">
         </div>
         <div class="content3">
-          <h4>GITA-Galactic Interplanetary Travel Agency</h4>
+          <h2>GITA-Galactic Interplanetary Travel Agency</h2>
           <p>GITA is a hypothetical futuristic company, aka, the Galactic Interplanetary Travel Agency. This is a personal world building project </p>
           <button>View Project</button>
         </div>
